--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
   </head>
 
   <body>
-    <header class="jumbotron">
+    <header class="jumbotron justify-content-md-center">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container row" id="datetime_24h">
-      <!-- Timeblocks go here -->
+    <div class="container">
+      <div class="row mx-5 mx-5 d-flex justify-content-center" id="datetime_24h"></div>
     </div>
 
     <script src="./assets/js/scripts.js"></script>
